<resources>

    <!-- PlaceHolders -->
    <string name="place_holder">TextView</string>

    <!-- Global -->
    <string name="app_name">DoggySitter</string>
    <string name="hello_text">Welcome to DoggySitter</string>
    <string name="navigation_drawer_open">Open Navigation</string>
    <string name="navigation_drawer_close">Close Navigation</string>
    <string name="signup">Signup</string>
    <string name="signin">Signin</string>
    <string name="my_account">My Account</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="small">Small</string>
    <string name="medium">Medium</string>
    <string name="large">Large</string>
    <string name="male">Male</string>
    <string name="female">Female</string>

    <!-- Main Menu -->
    <string name="feed">Feed</string>
    <string name="new_post">New Post</string>
    <string name="articles">Articles</string>
    <string name="user_interface">User Interface</string>
    <string name="signout">Signout</string>

    <!-- My Account Fragment -->
    <string name="change_password">Change Password</string>
    <string name="me_and_pet">Me &amp; My Pet</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="phone">Phone</string>
    <string name="pet_name">Pet Name</string>
    <string name="pet_age">Pet Age</string>
    <string name="pet_gender">Pet Gender</string>
    <string name="pet_size">Pet Size</string>
    <string name="update">Update</string>

    <!-- New Post -->
    <string name="add_picture">Add Picture</string>
    <string name="post">Post</string>
    <string name="post_description">Post Description</string>

    <!-- Single Feed Item -->
    <string name="chat">Chat</string>
    <string name="message_here">Write your message here</string>
    <string name="send_message">Send</string>

    <string-array name="pets">
        <item>Dog</item>
        <item>Cat</item>
        <item>Parrot</item>
        <item>Snake</item>
    </string-array>
    <string-array name="pet_genders">
        <item>Male</item>
        <item>Female</item>
    </string-array>
    <string-array name="pet_sizes">
        <item>Small</item>
        <item>Medium</item>
        <item>Large</item>
    </string-array>
</resources>